envoy/envoy.yaml
static_resources:
  listeners:
    - name: main_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8060
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                        "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                        path: /dev/stdout
                        log_format:
                          json_format:
                            timestamp: "%START_TIME%"
                            method: "%REQ(:METHOD)%"
                            path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                            protocol: "%PROTOCOL%"
                            response_code: "%RESPONSE_CODE%"
                            grpc_status: "%GRPC_STATUS%"
                            content_type: "%REQ(content-type)%"
                            authority: "%REQ(:authority)%"
                            user_agent: "%REQ(user-agent)%"
                            x_forwarded_proto: "%REQ(x-forwarded-proto)%"
                            cf_ray: "%REQ(cf-ray)%"
                            cf_visitor: "%REQ(cf-visitor)%"
                            te: "%REQ(te)%"
                            upstream_host: "%UPSTREAM_HOST%"
                            upstream_cluster: "%UPSTREAM_CLUSTER%"
                            duration_ms: "%DURATION%"
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                            headers:
                              - name: content-type
                                string_match:
                                  prefix: application/grpc
                          route:
                            cluster: grpc_backend
                            timeout: 60s
                            max_stream_duration:
                              max_stream_duration: 300s
                        - match:
                            prefix: "/"
                          route:
                            cluster: http_backend
                            timeout: 60s
                http_filters:
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: grpc_backend
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      connect_timeout: 5s
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: grpc_backend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8069
    - name: http_backend
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      connect_timeout: 5s
      load_assignment:
        cluster_name: http_backend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8070
